<resources>
    <string name="app_name">PlanIt</string>
    <string name="login_welcome">Welcome to PlanIt.\n Please Login.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add">Add</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="app_logo">App Logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="re_password">Repeat Password</string>
    <string name="log_out">Log out</string>
    <string name="signout">Sign Out</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="about">About</string>
    <string name="phone_number">Phone Number</string>
    <string name="hour_sample">HH:MM</string>
    <string name="firebase_cloud_messaging_token">1234355</string>
    <string name="user_id">0</string>
    <string name="date">DD/MM/YY</string>
    <string name="search">Search</string>
    <string name="phone_number_ex">0527018153</string>
    <string name="alphabetENG">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="alphabetHEB">אבגדהוזחטיכלמנסעפצקרשת</string>
    <string name="time">HH:mm</string>
    <string name="home">My Events</string>
    <string name="eventName">Event Name</string>
    <string name="inviteFriends">Invite Friends</string>
    <string name="eventLocation">Yehud</string>
    <string name="eventDate">2.6.2017</string>
    <string name="eventHour">21:00</string>
    <string name="people">People</string>
    <string name="hosted_events">Hosted</string>
    <string name="invited_events">Invited</string>
    <string name="what_to_bring">What do you want to bring?</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="close">Close</string>
    <string name="food_and_drinks_empty">No one requested anything yet.\n Be the first?</string>
    <string name="addedby">Added by %1$s</string>
    <string name="amount_and_unit">%1$d %2$s</string>
    <string name="byperson">by %1$s</string>
    <string name="unit_from">" %1$s from %2$s"</string>
    <string name="amount_example">6</string>
    <string name="update">Update</string>
    <string name="already_got">We\'ve already got:</string>
    <string name="delete">delete</string>
    <string name="default_unit">Default Unit</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="hosted_events_empty">You don\'t host any events yet.</string>
    <string name="invited_events_empty">You\'re not invited to any events yet.</string>
    <string name="invited_list_empty">No invited people yet.</string>
    <string name="you">You</string>
    <string name="edit">edit</string>
    <string name="done">Done</string>
    <string name="no_info">No info.</string>
    <string name="name_example">Dor Avrahami</string>
    <string name="message_example">Hey, whats up y\'all?</string>
</resources>
