<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <android.support.v7.widget.CardView
        android:id="@+id/message_card"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="200dp"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:cardBackgroundColor="#E3F2FD">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/message_sender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_example"
                android:paddingStart="4dp"
                android:paddingTop="4dp"/>

            <TextView
                android:id="@+id/message_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_example"
                android:layout_below="@id/message_sender"
                android:layout_margin="8dp"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/message_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="12sp"
                android:layout_alignBaseline="@id/message_content"
                android:layout_toRightOf="@id/message_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>