<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_food_name_container"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_food_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/what_to_bring"
            android:inputType="textCapWords"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:id="@+id/food_amount_unit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_food_name_container">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/food_amount_container"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="50">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/food_amount_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/amount"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/food_unit_container"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="50">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/food_unit_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/unit"
                android:inputType="textCapWords"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</RelativeLayout>