<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/add_event_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/event_name_edit_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:maxLength="22" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/date_seperator"
                android:layout_width="match_parent"
                android:layout_below="@id/event_name_edit_container"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="18dp"/>

            <TextView
                style="@style/defaultPicker"
                android:id="@+id/event_date_edit_picker"
                android:layout_below="@id/date_seperator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:textColor="@android:color/darker_gray"/>
            <TextView
                style="@style/defaultPicker"
                android:id="@+id/event_time_edit_picker"
                android:layout_below="@id/date_seperator"
                android:layout_alignEnd="@id/event_name_edit_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hour_sample"
                android:textColor="@android:color/darker_gray"
                />

            <View
                android:id="@+id/date_location_seperator"
                android:layout_width="match_parent"
                android:layout_below="@id/event_time_edit_picker"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="18dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_below="@id/date_location_seperator"
                android:id="@+id/event_location_edit_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_location_edit_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:inputType="textCapWords"
                    android:maxLength="30"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/about_seperator"
                android:layout_width="match_parent"
                android:layout_below="@id/event_location_edit_container"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="15dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_below="@id/about_seperator"
                android:id="@+id/event_about_continer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_about_edit_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/about"
                    android:lines="5"
                    android:maxLines="5"
                    android:gravity="top"
                    android:inputType="textMultiLine|textCapSentences"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
</RelativeLayout>