<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <android.support.v7.widget.CardView
        android:id="@+id/event_card"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardElevation="2dp"
        android:layout_marginBottom="1dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">
            <TextView
                style="@style/defaultText"
                android:id="@+id/event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_alignParentTop="true"
                tools:text="Event Name"
                android:maxLines="1"
                android:layout_alignParentStart="true"/>
            <TextView
                style="@style/defaultText"
                android:textSize="18sp"
                android:id="@+id/event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:text="@string/location"
                android:layout_below="@id/event_name"
                />
            <TextView
                style="@style/defaultText"
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_below="@id/event_location"/>
            <View
                android:id="@+id/date_time_separator"
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:background="@android:color/darker_gray"
                android:layout_toEndOf="@id/event_date"
                android:layout_below="@id/event_location"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
            <TextView
                style="@style/defaultText"
                android:id="@+id/event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_toEndOf="@id/date_time_separator"
                android:layout_below="@id/event_location"/>


            <!--android:layout_alignParentEnd="true" android:layout_alignBaseline="@id/event_name"-->
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>

